# comment-system

./: .env.example  .env.example.vercel  .gitignore  Cargo.toml  DEPLOY.md  README.md  _dao_part1.rs  _tw_dao.txt  add_params_import.py  check2.ps1  check3.ps1  check4.ps1  check5.ps1  check6.ps1  check7.ps1  check8.ps1  check9.ps1  check9b.ps1  check_captcha.py  check_captcha2.py  check_db.py  check_db2.py  check_db3.py  check_db_bytes.py  check_encoding.ps1  check_nonutf8.py  check_paren.py  check_q.py  dump_bytes.py  find_corrupt.ps1  find_fffd.py  find_q.py  find_quotes.py  find_quotes2.py  find_quotes3.py  find_quotes4.py  find_quotes5.py  fix-vercel-turso-connection_2026-07-18.md  fix_all.ps1  fix_captcha.py  (+52 more)
.cargo/: config.toml
api/: Cargo.toml  api.rs  build.sh  examples_mdtest.rs  index.rs  vercel.json
api/src/: auth.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  service.rs
cli/: Cargo.toml
cli/src/: main.rs  oauth_ext.rs
client/: build.js  package-lock.json  package.json  tsconfig.json
client/src/: api.ts  i18n.ts  index.ts  style.css  widget.ts
core/: Cargo.toml
core/src/: constants.rs  errors.rs  lib.rs  models.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  cook.rs  crypto.rs  entity.rs  lib.rs  markdown.rs  validate.rs
crates/core/tests/: sanity.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  bootstrap.rs  cache.rs  captcha_image.rs  dao.rs  extractors.rs  lib.rs  router.rs  services.rs
crates/server/src/handlers/: auth.rs  cache.rs  captcha.rs  comments.rs  conf.rs  mod.rs  site.rs  transfer.rs  upload.rs  user.rs  votes.rs
crates/server/src/services/: anti_spam.rs  captcha.rs  email.rs  ip_region.rs  notify.rs
server/: Cargo.toml
server/migrations/: 001_initial.sql  002_oauth_captcha.sql
server/src/: admin_ui.rs  auth.rs  cache.rs  captcha.rs  config.rs  db.rs  lib.rs  mailer.rs  main.rs  middleware.rs  oauth.rs  spam.rs  storage.rs
server/src/routes/: admin.rs  comments.rs  email.rs  mod.rs  oauth.rs  pages.rs  public.rs  sites.rs  uploads.rs
server/static/admin/: app.js  index.html  style.css
web/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue  api.ts  main.ts  types.ts
web/src/components/: AdminPanel.vue  CommentEditor.vue  CommentItem.vue  CommentList.vue
web/src/composables/: useAuth.ts
web/src/styles/: main.scss  variables.scss
