[workspace]
resolver = "2"
members = ["core", "server", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Comment System"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
