[package]
name = "blogcomment-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "handler"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql = "0.3"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
validator = { version = "0.16", features = ["derive"] }
pulldown-cmark = "0.11"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
