[package]
name = "comment-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cms"
path = "src/main.rs"

[dependencies]
comment-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tokio.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
argon2 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
tabled = "0.16"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
