[package]
name = "comment-server"
version.workspace = true
edition.workspace = true

[lib]
name = "comment_server"
path = "src/lib.rs"

[[bin]]
name = "comment-server"
path = "src/main.rs"

[dependencies]
comment-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "compression-gzip", "fs"] }
libsql = { version = "0.9" }
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
regex = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }
rand = "0.8"
mime_guess2 = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "multipart"] }
url = "2"
base64 = "0.22"
bytes = "1"
