[package]
name = "artalk-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
comrak = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
proptest = "1"
