[package]
name = "artalk-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
artalk-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
chrono = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
validator = { workspace = true }
url = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
comrak = { workspace = true }
lettre = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = { workspace = true }
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
proptest = "1"
